# flowforge-ai

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/api/: package.json  pyproject.toml
apps/api/app/: main.py
apps/web/: next-env.d.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/ui/: button.tsx
docs/: api.md  overview.md
evals/: example-eval-1.json
examples/: example-workflow-1.json
