[project]
name = "flowforge-api"
version = "0.1.0"
description = "FlowForge AI API - compile natural language into executable workflow graphs."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

